--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,59 @@
-flask
-openpyxl
+altgraph==0.17.4
+argparse-addons==0.12.0
+asammdf==8.1.2
+attrs==25.3.0
+backcall==0.2.0
+bitstruct==8.21.0
+blinker==1.9.0
+canmatrix==1.2
+cantools==40.2.2
+click==8.1.8
+colorama==0.4.6
+crccheck==1.3.0
+customtkinter==5.2.2
+darkdetect==0.8.0
+decorator==5.1.1
+diskcache==5.6.3
+entrypoints==0.4
+et-xmlfile==1.1.0
+flask==3.1.1
+importlib-metadata==6.8.0
+ipython==7.34.0
+isal==1.7.2
+itsdangerous==2.2.0
+jedi==0.18.2
+jinja2==3.1.6
+jupyter-client==7.3.4
+jupyter-core==4.9.2
+lxml==5.4.0
+lz4==4.4.4
+MarkupSafe==3.0.2
+matplotlib-inline @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/matplotlib_inline-0.1.6-py3-none-any.whl
+nest-asyncio==1.5.6
+numexpr==2.10.2
+numpy @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/numpy-1.23.5-cp39-cp39-win_amd64.whl
+openpyxl @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/openpyxl-3.1.2-py2.py3-none-any.whl
+packaging==25.0
+pandas @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/pandas-1.5.3-cp39-cp39-win_amd64.whl
+parso==0.8.3
+pefile==2023.2.7
+pickleshare @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/pickleshare-0.7.5-py2.py3-none-any.whl
+prompt-toolkit==3.0.28
+Pygments==2.15.1
+pyinstaller==6.13.0
+pyinstaller-hooks-contrib==2025.4
+python-can==4.5.0
+python-dateutil @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/python_dateutil-2.8.2-py2.py3-none-any.whl
+pytz @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/pytz-2023.3-py2.py3-none-any.whl
+pywin32-ctypes==0.2.1
+pyzmq==23.2.1
+six @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/six-1.16.0-py2.py3-none-any.whl
+textparser==0.24.0
+tornado==6.1
+traitlets==5.14.0
+ttkbootstrap==1.13.8
+typing-extensions==4.14.0
+wcwidth==0.2.6
+werkzeug==3.1.3
+wrapt==1.17.2
+zipp==3.17.0
