--- a/requirements.txt
+++ b/requirements.txt
@@ -28,26 +28,26 @@ jupyter-core==4.9.2
 lxml==5.4.0
 lz4==4.4.4
 MarkupSafe==3.0.2
-matplotlib-inline @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/matplotlib_inline-0.1.6-py3-none-any.whl
+matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
 numexpr==2.10.2
-numpy @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/numpy-1.23.5-cp39-cp39-win_amd64.whl
-openpyxl @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/openpyxl-3.1.2-py2.py3-none-any.whl
+numpy==1.23.5
+openpyxl==3.1.2
 packaging==25.0
-pandas @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/pandas-1.5.3-cp39-cp39-win_amd64.whl
+pandas==1.5.3
 parso==0.8.3
 pefile==2023.2.7
-pickleshare @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/pickleshare-0.7.5-py2.py3-none-any.whl
+pickleshare==0.7.5
 prompt-toolkit==3.0.28
 Pygments==2.15.1
 pyinstaller==6.13.0
 pyinstaller-hooks-contrib==2025.4
 python-can==4.5.0
-python-dateutil @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/python_dateutil-2.8.2-py2.py3-none-any.whl
-pytz @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/pytz-2023.3-py2.py3-none-any.whl
+python-dateutil==2.8.2
+pytz==2023.3
 pywin32-ctypes==0.2.1
 pyzmq==23.2.1
-six @ file:///C:/Users/ifu1cob/Downloads/offline_pkgs/six-1.16.0-py2.py3-none-any.whl
+six==1.16.0
 textparser==0.24.0
 tornado==6.1
 traitlets==5.14.0
